--- a/authInMern/server/.env
+++ b/authInMern/server/.env
@@ -1,1 +1,5 @@
 DB =  "database url !"
+
+#MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/<dbname>?retryWrites=true&w=majority
+#PORT=4000
+#JWT_SECRET=your_jwt_secret
